# Scrapy-Idealista

./: Dockerfile  pyproject.toml
.devcontainer/: devcontainer.json
idealista/proxies/: proxies.py
